k8s/deployments/mlflow/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow
  namespace: mlflow-stack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow
  template:
    metadata:
      labels:
        app: mlflow
    spec:
      containers:
        - name: mlflow
          image: ghcr.io/mlflow/mlflow:latest
          ports:
            - containerPort: 5001
          command: ["mlflow", "server"]
          args:
            - "--host"
            - "0.0.0.0"
            - "--port"
            - "5001"
            - "--backend-store-uri"
            - "sqlite:///mlflow.db"
            - "--default-artifact-root"
            - "/mlruns"
          volumeMounts:
            - name: mlruns-vol
              mountPath: /mlruns
      volumes:
        - name: mlruns-vol
          persistentVolumeClaim:
            claimName: mlruns-pvc
