k8s/deployments/mlflow/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mlflow
  namespace: mlflow-stack
spec:
  selector:
    app: mlflow
  ports:
    - port: 5001
      targetPort: 5001
